<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="valor_da_compra">Valor da Compra: </string>
    <string name="numero_do_cartao">Número do Cartão </string>
    <string name="mes_cartao">MM </string>
    <string name="ano_cartao">AA </string>
    <string name="cvc_pagamento">CVC </string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ </string>
    <string name="nome_cartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="confira_resumo">Confira o resumo da compra:</string>

</resources>
