<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/tv_pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Digite as informações do cartão de crédito que você deseja usar para o pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pagamento_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text = "@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pagamento_orientacao" />

    <TextView
        android:id="@+id/tv_pagamento_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_pagamento_valor"
        app:layout_constraintTop_toBottomOf="@+id/tv_pagamento_valor"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/et_pagamento_ncartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:maxLength="12"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pagamento_preco" />

    <EditText
        android:id="@+id/et_pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/et_pagamento_ncartao"
        app:layout_constraintTop_toBottomOf="@id/et_pagamento_ncartao"
        />

    <EditText
        android:id="@+id/et_pagamento_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/et_pagamento_mes_cartao"
        app:layout_constraintStart_toEndOf="@id/et_pagamento_mes_cartao"
        />

    <EditText android:id="@+id/et_pagamento_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        android:maxLength="3"
        android:hint="@string/cvc_pagamento"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        app:layout_constraintTop_toBottomOf="@id/et_pagamento_ncartao"
        app:layout_constraintEnd_toEndOf="@id/et_pagamento_ncartao"/>

    <EditText
        android:id="@+id/et_pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:digits="@string/mascara_nome_cartao"
        android:hint="@string/nome_cartao"
        app:layout_constraintEnd_toEndOf="@+id/et_pagamento_cvc"
        app:layout_constraintStart_toStartOf="@+id/et_pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/et_pagamento_mes_cartao" />

    <Button
        android:id="@+id/pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="@+id/et_pagamento_nome_cartao"
        app:layout_constraintTop_toBottomOf="@+id/et_pagamento_nome_cartao" />


</androidx.constraintlayout.widget.ConstraintLayout>